RESOLVED FIXED 196984
[Web GPU] GPUComputePassEncoder::dispatch number of thread groups, not grid size
https://bugs.webkit.org/show_bug.cgi?id=196984
Summary [Web GPU] GPUComputePassEncoder::dispatch number of thread groups, not grid size
Justin Fan
Reported 2019-04-16 14:21:32 PDT
[Web GPU] GPUComputePassEncoder::dispatch number of thread groups, not griid size.
Attachments
Patch (3.31 KB, patch)
2019-04-16 14:29 PDT, Justin Fan
no flags
Patch (3.31 KB, patch)
2019-04-16 14:37 PDT, Justin Fan
no flags
Patch for landing (3.31 KB, patch)
2019-04-17 15:00 PDT, Justin Fan
no flags
Justin Fan
Comment 1 2019-04-16 14:29:35 PDT
Justin Fan
Comment 2 2019-04-16 14:37:37 PDT
WebKit Commit Bot
Comment 3 2019-04-16 16:07:47 PDT
Comment on attachment 367572 [details] Patch Rejecting attachment 367572 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 367572, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=367572&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=196984&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 367572 from bug 196984. Fetching: https://bugs.webkit.org/attachment.cgi?id=367572 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/webgpu/compute-squares.html M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 07b1f571ae47b0c68bc6f9ea4a4b2e30defcf08d and refs/remotes/origin/master differ, using rebase: :040000 040000 c0080231f93be2dfa1d73e2d2564c7600a4e6799 fff0dbcd74fedb52313c85a99c1c1e533c006a2d M LayoutTests :040000 040000 42977158ade0a154a145858c3012a4232f93db1f a5a30be4a9e63dea465b4d658216605c655e7a79 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/webgpu/compute-squares.html M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 07b1f571ae47b0c68bc6f9ea4a4b2e30defcf08d and refs/remotes/origin/master differ, using rebase: :040000 040000 c0080231f93be2dfa1d73e2d2564c7600a4e6799 fff0dbcd74fedb52313c85a99c1c1e533c006a2d M LayoutTests :040000 040000 42977158ade0a154a145858c3012a4232f93db1f a5a30be4a9e63dea465b4d658216605c655e7a79 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource From https://git.webkit.org/git/WebKit cbc2e5612a6..936feb223a4 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 244359 = cbc2e5612a60e1595b80bcfaf8aca5ac1278b755 r244360 = 936feb223a41d668ca350e871aaf2f9cbc0c61c0 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: https://webkit-queues.webkit.org/results/11891563
Justin Fan
Comment 4 2019-04-17 15:00:34 PDT
Created attachment 367682 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-04-17 15:50:41 PDT
The commit-queue encountered the following flaky tests while processing attachment 367682 [details]: imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-move-within-document.html bug 197038 (author: cdumez@apple.com) fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2019-04-17 15:51:26 PDT
Comment on attachment 367682 [details] Patch for landing Clearing flags on attachment: 367682 Committed r244406: <https://trac.webkit.org/changeset/244406>
WebKit Commit Bot
Comment 7 2019-04-17 15:51:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-04-17 15:52:20 PDT
Note You need to log in before you can comment on or make changes to this bug.