[Web GPU] GPUComputePassEncoder::dispatch number of thread groups, not grid size https://bugs.webkit.org/show_bug.cgi?id=196984

Reviewed by Myles C. Maxfield.

Source/WebCore:

Test: Updated compute-squares.html.

* platform/graphics/gpu/cocoa/GPUComputePassEncoderMetal.mm:
(WebCore::GPUComputePassEncoder::dispatch):

LayoutTests:

* webgpu/compute-squares.html: One thread group is enough to process the data in a single pass.


Canonical link: https://commits.webkit.org/211292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244406 268f45cc-cd09-0410-ab3c-d52691b4dbfc